14Feb06=======================================================================
1. Turn R and SFI around in mrtg.pl.
13Feb06=======================================================================
1. Updated prefixes with cty-1601 data.
2. Fixed qth in show/muf so that it shows the correct qth (if known).
3. Try to make the state machine in convkeps.pl deal with more variations
of the 2 line keps sets that are available on line. Also give a sensible
error message if no keps were actually decoded.
4. Update the base keps to the latest set of AMSAT keps 06033.
04Feb06=======================================================================
1. Explicitly ignore spots with lower case characters in the spotted call
01Feb06=======================================================================
1. Explicitly ignore spots with blank spotted callsigns
26Jan06=======================================================================
1. Fix divide by 0 error in DXBearing (how come this has taken so long to
appear?).
22Jan06=======================================================================
1. Remove +<prefix> from the fronts of comments to fix LoTW dupes.
18Jan06=======================================================================
1. Fix spurious announce from previous year appearing in sh/ann.
15Jan06=======================================================================
1. Fix some obviously long standing problems with create_sysop.pl and also
with initialising the User file.
2. Fixed the problem with certain things not being shown in sh/log (because of
a regex that rejected too many things).
3. Speeded up sh/log quite a bit at the same time.
4. Add a default limit of the last 36 months for sh/log querys. 
14Jan06=======================================================================
1. undo frequency rounding change, it causes more problems than it solves.
11Jan06=======================================================================