@@ -114,9 +114,9 @@ package CmdAlias;
       '^set/user', 'unset/node', 'unset/node',
 	'^set$', 'apropos set', 'apropos',
 	  '^sho?w?/u$', 'show/user', 'show/user',
-	  '^sho?w?/bu', 'show/files bulletins', 'show/files',
-	  '^sho?w?/c/a', 'show/configuration all', 'show/configuration',
-	  '^sho?w?/c/n', 'show/configuration nodes', 'show/configuration',
+	  '^sho?w?/bul', 'show/files bulletins', 'show/files',
+	  '^sho?w?/co?n?\w*/a', 'show/configuration all', 'show/configuration',
+	  '^sho?w?/co?n?\w*/n', 'show/configuration nodes', 'show/configuration',
 	  '^sho?w?/c$', 'show/configuration', 'show/configuration',
 	  '^sho?w?/com', 'dbavail', 'dbavail',
 	  '^sho?w?/dxcc', 'show/dx dxcc', 'show/dx',
@@ -132,7 +132,7 @@ package CmdAlias;
 	  '^sho?w?/myd?x?/(\d+)', 'show/dx filter $1', 'show/mydx',
 	  '^sho?w?/myd?x?/d(\d+)', 'show/dx filter from $1', 'show/mydx',
 	  '^sho?w?/myd?x?', 'show/dx filter', 'show/mydx',
-	  '^sho?w?/newc/n', 'show/newconfiguration node', 'show/newconfiguration',
+	  '^sho?w?/newco?n?\w*/n', 'show/newconfiguration node', 'show/newconfiguration',
 	  '^sho?w?/sta?$', 'show/station', 'show/station',
 	  '^sho?w?/tnc', 'who', 'who',
       '^sho?w?/up', 'show/cluster', 'show/cluster',
