@@ -26,6 +26,8 @@ package DXM;
 				beepon => 'Beeps are now on',
 				believes => 'Believe node $_[0] via $_[1]',
 				believeu => 'Don\'t believe node $_[0] via $_[1]', 
+				buddya => '$_[0] has been added to your buddies',
+				buddyu => '$_[0] has been removed from your buddies',
 				call1 => 'Callsign lookup via $_[0]:',
 				conother => 'Sorry $_[0] you are connected to me on another port',
 				concluster => 'Sorry $_[0] you are already connected elsewhere on the cluster (on $_[1])',
@@ -152,6 +154,8 @@ package DXM;
 				lange2 => 'failed to set language on $_[0]', 
 				lastconn => 'Last connect',
 				leave => 'leaving group $_[0]',
+				lgset => 'Added $_[0] to the local node group',
+				lgunset => 'Removed $_[0] from the local node group',
 				lh1 => '$main::data/hop_table.pl doesn\'t exist',
 				local1 => 'Local',
 				loce1 => 'Please enter your location,, set/location <latitude longitude>',
@@ -163,6 +167,8 @@ package DXM;
 				lockoutc => '$_[0] Created and Locked out',
 				lockoutun => '$_[0] Unlocked',
 				lockoutuse => 'usage: sh/lockout <call>|ALL',
+				loginb => 'Buddy $_[0] has logged in',
+				logoutb => 'Buddy $_[0] has logged out',
 				loginu => 'User $_[0] has logged in',
 				logoutu => 'User $_[0] has logged out',
 				loginn => 'Node $_[0] has logged in',
